# ong_office365

./: README.md  pyproject.toml  requirements.txt
src/ong_office365/: __init__.py  msal_token_manager.py  ong_forms.py  ong_ntlm_sharepoint.py  ong_office365_base.py  ong_onedrive.py  ong_selenium_sharepoint.py  ong_sharepoint.py
src/ong_office365/find_client_ids/: find_client_ids.py
src/ong_office365/forms_objects/: questions.py
src/ong_office365/selenium_token/: office365_selenium.py
tests/: test_ong_office365_base.py  test_ong_onedrive.py  test_ong_sharepoint.py  test_ong_sharepoint_selenium.py  test_selenium_token.py
